# CodeSmellHunter

./: .gitignore  README.md  pyproject.toml
output/: report.json
samples/: bad_code.py
src/: analyzer.py  cli.py  config.py  report.py  utils.py
src/codesmellhunter/: analyzer.py  cli.py  config.py  loader.py  metrics.py  report.py  utils.py
src/smells/: base.py  deep_nesting.py  duplicate_code.py  large_class.py  long_method.py  magic_numbers.py  many_params.py
tests/: test_analyzer.py  test_detectors.py  test_smells.py
