[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "codesmellhunter"
version = "2.0.0"
description = "Static code smell detection tool for Python"
authors = [{ name="Your Name" }]
dependencies = []

[project.scripts]
codesmellhunter = "codesmellhunter.cli:main"
